<resources>
    <string name="app_name">Plinng</string>
    <string name="welcome_to_lapit_chat_app">Welcome to Plinng Chat</string>
    <string name="this_is_main_page">This is main page</string>
    <string name="need_a_new_account">Need a New Account</string>
    <string name="displayname">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="login">Login</string>
    <string name="login_to_the_account">Login to the Account</string>
    <string name="torles_tajekoztato_txt">A Felhasználói fiókod törlését kérted. A fiók törlését meg kell erősítened a bejelentkezési adataiddal, kérlek add meg mégegyszer és utoljára az e-mail címedet és jelszavad.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_name">Display Name</string>
    <string name="hi_there_i_m_using_lapit_chat_app">Hi there, I\'m using Lapit Chat App</string>
    <string name="change_status">Change status</string>
    <string name="change_image">Change Image</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="log_out">Log Out</string>
    <string name="chats">CHATS</string>
    <string name="hello">HELLO</string>
    <string name="requests">REQUESTS</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="done">Done</string>

    <string name="facebook_app_id">373503593149023</string>
    <string name="fb_login_protocol_scheme">fb373503593149023</string>
    <string name="channel_name">lapitchat</string>
    <string name="channel_description">uj_barat</string>
    <string name="online">online</string>
    <string name="friends">FRIENDS</string>
    <string name="visible_email">Visible Email</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="users">Users</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="unfriend">Unfriend</string>
    <string name="have">Have</string>
    <string name="friends_have">friends</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="seen">seen</string>
    <string name="enter_message_here">Enter message here ...</string>
    <string name="sent">not seen yet</string>
    <string name="less_than_a_minute">less than a miunte</string>
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="minute_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="delete_message">If you delete the conversation, this means you can not see anymore, but your partner can see. However the pictures will removing from the server.</string>
    <string name="color_picker">Color Picker</string>
    <string name="dummy_content">Plinng Chat</string>
    <string name="the_sound_what_are_you_waiting_for">- the sound what are you waiting for</string>
    <string name="send">Send</string>
    <string name="here_you_can_sen_notifications_for_everyone_please_be_careful">Here you can send notifications for everyone, please be careful</string>
    <string name="send_notification">Send Notification</string>
    <string name="admin">Admin</string>
    <string name="wanna_be_your_friend">Wanna be your friend</string>
    <string name="sent_a_new_message">Sent a new message</string>
    <string name="vibrate_at_new_message">Vibrate at new message</string>
    <string name="the_avaiable_update_is_downloadable_from_this_link">The avaiable update is downloadable from this link</string>
    <string name="need_a_new_password">Need a new password</string>
    <string name="new_password_request">New Password Request</string>
    <string name="write_your_email_address_again">Write your email address again, and click the Request button, you will got a new mail with a link for the new password setup.</string>
    <string name="new_image">new image</string>
    <string name="update">update</string>
    <string name="appinfo">App Info</string>
    <string name="profile_settings">Profile settings</string>
    <string name="deleted_message">deleted message</string>
    <string name="change_email">Change Email</string>
    <string name="az_email_c_m_cser_j_hez">Please give the current email address and password, and the new email address</string>
    <string name="current_email_address">Current email address</string>
    <string name="new_email_address">New email address</string>
    <string name="password_8_car">The password at least 8 caracter</string>
    <string name="change_the_splash_screen_time">Change the splash screen time</string>
    <string name="open_profile">Open Profile</string>
    <string name="send_message">Send message</string>
    <string name="select_options">Select Options</string>

</resources>
