<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/request_clear"
        android:title="Clear All"
        android:icon="@drawable/round_done_all_white_48dp"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/main_account_settings"
        android:title="@string/account_settings" />
    <item
        android:id="@+id/main_all_users"
        android:title="@string/all_users" />

    <item
        android:id="@+id/main_color_picker"
        android:title="@string/color_picker" />
    <item
        android:id="@+id/main_admin"
        android:title="@string/admin"
        android:visible="false"/>
    <item
        android:id="@+id/main_appinfo"
        android:title="@string/appinfo" />

    <item
        android:title=""
        android:visible="true"/>
    <item
        android:id="@+id/main_logout_btn"
        android:title="@string/log_out" />


</menu>