<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.muustar.plinng.DeleteProfileActivity">

    <include
        android:id="@+id/deleteprofile_appbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/deleteprofile_appbar">

        <TextView
            android:id="@+id/szoveg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/torles_tajekoztato_txt"
            android:textAlignment="center"
            android:layout_margin="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/deleteprofile_email"
            android:layout_below="@id/szoveg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/TextInputEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/deleteprofile_password"
            android:layout_below="@id/deleteprofile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/deleteprofile_button"
            android:layout_below="@id/deleteprofile_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_profile"
            android:layout_centerHorizontal="true"
            android:background="?attr/colorAccent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>


    </RelativeLayout>
</RelativeLayout>