<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.muustar.plinng.ChangeEmailActivity">

    <include
        android:id="@+id/changeemail_appbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/changeemail_progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_below="@id/changeemail_appbar"
        android:indeterminate="true"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/changeemail_appbar">

        <TextView
            android:id="@+id/changeemail_szoveg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/az_email_c_m_cser_j_hez"
            android:textAlignment="center"
            android:layout_margin="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/changeemail_email"
            android:layout_below="@id/changeemail_szoveg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/TextInputEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_email_address"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/changeemail_password"
            android:layout_below="@id/changeemail_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/changeemail_new_email"
            android:layout_below="@id/changeemail_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/TextInputEditText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_email_address"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/changeemail_button"
            android:layout_below="@id/changeemail_new_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_email"
            android:layout_centerHorizontal="true"
            android:background="?attr/colorAccent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>


    </RelativeLayout>
</RelativeLayout>