<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.muustar.plinng.StatusActivity">

    <include
        android:id="@+id/status_appbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/status_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_status"

            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/status_saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="171dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/save_changes" />

    <ImageView
        android:id="@+id/status_imageDone"
        android:layout_width="262dp"
        android:layout_height="241dp"
        android:layout_below="@+id/status_appbar"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        app:srcCompat="@mipmap/ic_green_done"
        android:contentDescription="@string/done" />

</RelativeLayout>