<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/open_bg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="172dp"
        android:text="@string/welcome_to_lapit_chat_app"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="273dp" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="241dp"
        android:background="@color/colorAccent"
        android:text="@string/already_have_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="335dp" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="177dp"
        android:background="@android:color/white"
        android:text="@string/need_a_new_account"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="423dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/start_google_signin"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="114dp"
        android:text="@string/common_signin_button_text_long" />



</RelativeLayout>