<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    tools:context="com.muustar.plinng.ReqNewPasswordActivity">

    <include
        android:id="@+id/reqnewpasswd_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_margin="20dp"
        android:layout_below="@id/reqnewpasswd_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_below="@id/login_toolbar"
            android:text="@string/new_password_request"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/reqnewpasswd_info"
            android:layout_below="@id/title2"
            android:text="@string/write_your_email_address_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textAlignment="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@id/reqnewpasswd_info"
            android:id="@+id/reqnewpasswd_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reqnewpasswd_emaildet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/reqnewpasswd_reqbutton"
            android:layout_below="@id/reqnewpasswd_email"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password_request"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>
    </RelativeLayout>
</RelativeLayout>