<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context="com.muustar.plinng.ProfileActivity">


    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitCenter"
        android:src="@color/colorPrimaryDark"
        android:transitionName="imageTrans"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/profile_displayname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Display name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:transitionName="nameTrans"
        tools:ignore="HardcodedText,UnusedAttribute" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_displayname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:autoLink="email"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="gone"
        tools:ignore="HardcodedText,UnusedAttribute" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:autoLink="web"
        android:text="Current User Status"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:transitionName="statusTrans"
        tools:ignore="HardcodedText,UnusedAttribute" />

    <TextView
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/profile_sendReqBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/profile_sendReqBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/profile_declineBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/send_friend_request"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:visibility="invisible" />

    <Button
        android:id="@+id/profile_declineBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/decline_friend_request"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:visibility="invisible" />

</RelativeLayout>